--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,10 +1,17 @@
-<h1>Your Messages</h1>
+<h1>Messages</h1>
+<hr>
 
 <% @messages.each do |message| %>
-  <div>
-    <p><%= message.content %></p>
-    <small>Sent: <%= message.created_at.strftime("%B %d, %Y") %></small>
-  </div>
+    <div>
+        <%= message.content %>
+        <small>Sent: <%= message.created_at.strftime("%B %d, %Y") %></small>
+        <small><%= message.admin_read? ? "Read" : "Unread" %></small>
+        <div>
+            <% if message.reply %>
+                <p><strong>Response: </strong> <%= message.reply.content %></p>
+            <% end %>
+        </div>
+    </div>
 <% end %>
 
-<%= link_to "Send New Message", new_message_path, class: "button" %>
+<%= link_to "New Message", new_message_path %>
